# DAMASK-MCP

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  fastmcp.json  pyproject.toml  server.py
.github/workflows/: ci.yml
docs/: horizon_minimal_deploy.md  local_user_setup.md  miscellaneous_api_inventory.md  postprocessing_api_inventory.md  preprocessing_api_inventory.md  release_checklist.md  remote_fastmcp_install.md
examples/: claude_desktop_config.json  codex.mcp.toml
src/damask_copilot/: __init__.py
src/damask_copilot/mcp_clients/: __init__.py  damask_preprocess_client.py
src/damask_copilot/mcp_servers/: __init__.py  _fastmcp.py  damask_core_server.py  damask_misc_server.py  damask_postprocess_server.py  damask_preprocess_server.py  damask_runner_server.py  damask_server.py  damask_validation_server.py
src/damask_copilot/tools/: __init__.py  damask_yaml.py  geometry.py  validation.py
src/damask_mcp/: __init__.py  runtime.py
src/damask_mcp/adapter/: api_registry.py  serializers.py  validators.py  workspace.py
src/damask_mcp/mcp_clients/: __init__.py  damask_preprocess_client.py
src/damask_mcp/mcp_servers/: __init__.py  _fastmcp.py  auth.py  damask_core_server.py  damask_misc_server.py  damask_postprocess_server.py  damask_preprocess_server.py  damask_runner_server.py  damask_server.py  damask_validation_server.py
src/damask_mcp/tools/: __init__.py  damask_yaml.py  geometry.py  validation.py
src/damask_mcp_adapter/: __init__.py  api_registry.py  serializers.py  validators.py  workspace.py
src/damask_mcp_adapter/modules/: config_material.py  core.py  grid.py  grid_filter_tools.py  grid_tools.py  loading.py  mechanics.py  (+11 more)
tests/: test_auth.py  test_core_module.py  test_loading_material_grid_rotation.py  test_material_seed_grid_tools.py  test_material_yaml_validation.py  test_mcp_tools.py  test_mechanics_tensor.py  test_result_misc_tools.py  test_runner.py  test_runtime.py  test_serializers.py  test_simulation_setup_validation.py  test_v1_preprocess_mcp_integration.py  test_validators.py  test_workspace.py
(+25 files in other folders)
