[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "damask-mcp"
version = "0.1.0"
description = "Standalone FastMCP servers for DAMASK preprocessing, validation, execution, and post-processing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=2.2",
  "mcp",
  "pydantic",
  "pyyaml",
  "damask",
  "numpy",
  "scipy",
  "h5py",
  "pandas",
  "vtk",
  "matplotlib",
]

[project.scripts]
damask-mcp = "damask_copilot.mcp_servers.damask_server:main"

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
