[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "damask-mcp"
version = "0.1.0"
description = "Standalone FastMCP servers for DAMASK preprocessing, validation, execution, and post-processing."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "DAMASK MCP contributors" },
]
keywords = ["damask", "mcp", "fastmcp", "materials-science", "crystal-plasticity"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "fastmcp>=3,<4",
  "mcp[cli]>=1.27",
  "pydantic",
  "pyyaml",
  "damask",
  "numpy",
  "scipy",
  "h5py",
  "pandas",
  "vtk",
  "matplotlib",
]

[project.scripts]
damask-mcp = "damask_mcp.mcp_servers.damask_server:main"

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
